--- a/Javascript Practice/basic.html
+++ b/Javascript Practice/basic.html
@@ -17,7 +17,7 @@
     <br>
 
     <!-- changes the content on another element -->
-    <button onclick="document.getElementById('demo').innerHTML=Date()">click me</button>
+    <button onclick="document.getElementById('demo').innerHTML='Hello'">click me</button>
     <p id="demo"></p>
     <br>
 
